[package]
name = "arduino-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal user interface for browsing, downloading, and updating Arduino libraries using arduino-cli."
authors = ["igmrrf"]
repository = "https://github.com/igmrrf/arduino-tui"
license = "MIT OR Apache-2.0"
keywords = ["arduino", "tui", "cli", "embedded"]
categories = ["command-line-utilities", "embedded"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
